[gd_scene load_steps=3 format=3 uid="uid://b1cbmtdlfdr7e"]

[ext_resource type="FontFile" uid="uid://dq2xslcmyvkwq" path="res://Assets/fonts/Xolonium-Regular.ttf" id="1_b0q8l"]
[ext_resource type="Script" path="res://Scenes/settings_menu.gd" id="1_fy0su"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1_fy0su")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -41

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")

[node name="Video" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 127
theme_override_constants/v_separation = 15
columns = 2

[node name="ScreenMode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Screen Display"

[node name="ScreenMode_List" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="DisplayFPS" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Display FPS"

[node name="DisplayFPS_Button" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 20
columns = 2

[node name="MasterVol" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="MasterVolValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 23)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "100"

[node name="MusicVol" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Music Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2

[node name="MusicVolSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="MusicVolValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(35, 23)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "100"

[node name="SFXVol" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "SFX Volume"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer"]
layout_mode = 2

[node name="SFXVolSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
value = 100.0

[node name="SFXVolValue" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(35, 23)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "100"

[node name="Level_1" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Level_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
columns = 2

[node name="PointsToWin" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Points needed to win:"

[node name="PointToWinValue" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
placeholder_text = "7"
max_length = 2

[node name="PointsSpawnCount" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "How many points can spawn at once: "

[node name="PointsSpawnCountValue" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
placeholder_text = "1"
max_length = 2

[node name="MobSpawnCount" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "How many mobs can spawn at once: "

[node name="MobSpawnCountValue" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
placeholder_text = "5"
max_length = 2

[node name="MobMinSpeed" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Mob minimum speed (in px/sec):"

[node name="MobMinSpeedValue" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
placeholder_text = "150"
max_length = 4

[node name="MobMaxSpeed" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
text = "Mob maximum speed (in px/sec):"

[node name="MobMaxSpeedValue" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_b0q8l")
placeholder_text = "250"
max_length = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/ScreenMode_List" to="." method="_on_screen_mode_list_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Video/MarginContainer/GridContainer/DisplayFPS_Button" to="." method="_on_display_fps_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer2/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/GridContainer/HBoxContainer3/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer/PointToWinValue" to="." method="_on_point_to_win_value_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer/PointsSpawnCountValue" to="." method="_on_points_spawn_count_value_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer/MobSpawnCountValue" to="." method="_on_mob_spawn_count_value_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer/MobMinSpeedValue" to="." method="_on_mob_min_speed_value_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TabContainer/Level_1/MarginContainer/GridContainer/MobMaxSpeedValue" to="." method="_on_mob_max_speed_value_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
